new release gama-2.19

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-04-26   Ales Cepek <cepek@gnu.org>
+
+	New release 2.19
+
 	* New glossary of basic terms used in gama-local text output and
 	in documentation.
 
