Fix the bug in test linearization visitor for Angle
The visitor did not test if the right hand direction of the angle
pointed to a fixed point or to an adjustment point. If it was a fixed
point visitor added corrections from vector x with index 0, i.e. index
outside the vector.

Added file bug/test-linearization-angle.gkf and .xml to test all
possible combinations of angles with fixed and adjusment points.

The bug was reported by Greg Troxel on netbsd 9 amd64.

--- a/doc/gama-local-help.texi
+++ b/doc/gama-local-help.texi
@@ -1,5 +1,5 @@
 
-Adjustment of local geodetic network        version: 2.19 / GNU C/C++ 11.2
+Adjustment of local geodetic network        version: @value{VERSION}
 ************************************
 https://www.gnu.org/software/gama/
 
@@ -34,4 +34,3 @@ Options:
 Report bugs to: <bug-gama@@gnu.org>
 GNU gama home page: <https://www.gnu.org/software/gama/>
 General help using GNU software: <https://www.gnu.org/gethelp/>
-
