--- a/xml/lang/cz/review.cz.lang
+++ b/xml/lang/cz/review.cz.lang
@@ -311,8 +311,8 @@
    />
 
 <e id="T_GaMa_tstlin_obs_r_diff"
-   EN="      observed     r        difference"
-   cz="       merena      v         diference" />
+   EN="      observed     v        difference"
+   cz="       měřená      v         diference" />
 
 <e id="T_GaMa_tstlin_header1"
    EN="====== value == [mm|cc] == [cc] == [mm] =\n\n"
